--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -18,7 +18,7 @@
   "eat-kano": "Eat Kano",
   "default-dfjk": "DFJK by default",
   "default-20s": "20 seconds by default",
-  "game-title": "Eat Kano",
+  "game-title": "Eat Niku",
   "game-intro1": "Start from the bottom",
   "game-intro2": "Can you tap 150 times?",
   "record-rank": "To record rank(filtered special chars)",
@@ -31,11 +31,11 @@
   "home": "Home",
   "rank": "Rank",
   "repo": "Repo",
-  "text-level-1": "Try again?",
-  "text-level-2": "Not bad",
-  "text-level-3": "Nice",
-  "text-level-4": "Awesome",
-  "text-level-5": "R U kidding?",
+  "text-level-1": "this niku taste like shit",
+  "text-level-2": "this niku could be better",
+  "text-level-3": "this niku kinda tasty",
+  "text-level-4": "this niku is beautiful",
+  "text-level-5": "this niku is PERFECT!!",
   "time-over": "You've cheated for ",
   "rank-title": "Eat Kano - Ranking",
   "query-record": "Query Record",
